@@ -1,5 +1,8 @@
 2007-05-24  Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/__init__.py: Completed epydoc.
+	* src/lib/accerciser/plugin/message.py: Completed epydoc.
+	
 	* src/lib/accerciser/plugin/message.py: Epydoced.
 	* src/lib/accerciser/plugin/plugin_manager.py: Epydoced.
 	* src/lib/accerciser/plugin/view.py: Epydoced.
